# eggsec

./: .gitignore  .gitlab-ci.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_PLAN.md  CONTRIBUTING.md  Cargo.toml  DOCKER.md  DOCKER_COMPOSE.md  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP-EVASION.md  SECURITY.md  build.sh  config.toml  deferred.md  deny.toml  docker-compose.yml  fullplan.md  package-lock.json  plan.md  plan_ruby.md  test_safe_canonicalize
crates/eggsec/: Cargo.toml  build.rs
crates/eggsec-agent/: Cargo.toml
crates/eggsec-agent/src/: aggregator.rs  communication.rs  lib.rs  lifecycle.rs  registry.rs  scheduler.rs
crates/eggsec-cli/: Cargo.toml
crates/eggsec-cli/src/: daemon_cli.rs  main.rs
crates/eggsec-core/: Cargo.toml
crates/eggsec-core/src/: constants.rs  lib.rs  types.rs
crates/eggsec-daemon/: Cargo.toml
crates/eggsec-daemon/src/: client.rs  client_registry.rs  config.rs  error.rs  host.rs  http.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/eggsec-db-lab/: Cargo.toml
crates/eggsec-db-lab/src/: advanced.rs  baseline.rs  bridge.rs  compliance.rs  correlation.rs  lib.rs  manifest.rs  mcp.rs  mongodb.rs  mssql.rs  mysql.rs  postgres.rs  redis.rs  types.rs  utils.rs
crates/eggsec-db-lab/tests/: integration.rs
crates/eggsec-mobile-lab/: Cargo.toml
crates/eggsec-mobile-lab/src/: apk.rs  dynamic.rs  frida.rs  ipa.rs  lib.rs  runtime.rs  traffic.rs
crates/eggsec-output/: Cargo.toml
crates/eggsec-output/src/: agent.rs  ai_schema.rs  audit_summary.rs  baseline.rs  convert.rs  dedup.rs  envelope.rs  html.rs  junit.rs  lib.rs  policy_summary.rs  sarif.rs  schedule.rs  session.rs  trend.rs
crates/eggsec-output/tests/: report_envelope.rs
crates/eggsec-python/: AGENTS.override.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  VALIDATION.md  pyproject.toml  wheel-profiles.json
crates/eggsec-python/src/: ai_postprocess.rs  artifact.rs  async_client.rs  async_engine.rs  async_iter.rs  async_support.rs  audit.rs  auth_assess.rs  authorization.rs  backpressure.rs  baseline.rs  browser_assess.rs  browser_events.rs  browser_session.rs  buffer_support.rs  c2.rs  callbacks.rs  cancellation.rs  checkpoint.rs  checkpoint_store.rs  client.rs  compliance.rs  config_model.rs  consolidated_recon.rs  container.rs  content_addressed_store.rs  cvss.rs  daemon.rs  daemon_parity.rs  db_pentest.rs  deprecated.rs  dispatch_helpers.rs  distributed.rs  domains.rs  dto.rs  endpoint.rs  engine.rs  engine_state.rs  ergonomics.rs  error.rs  (+64 more)
crates/eggsec-python/tests/: api_surface_snapshot.json  compatibility_allowlist.json  compatibility_baseline.json  conftest.py  performance_budgets.json  redaction_dispositions.json  test_1_0_readiness.py  test_active_probe_hardening.py  test_async.py  test_async_io_lifecycle.py  test_async_protocol.py  test_browser_integration.py  test_browser_operational.py  test_buffer.py  test_callbacks.py  test_cancellation_cleanup.py  test_cancellation_contract.py  test_checkpoint_release.py  test_cross_surface.py  test_daemon_contract.py  test_daemon_integration.py  test_daemon_repository_operational.py  test_db_integration.py  test_db_pentest.py  test_direct_engine_equivalence.py  test_dto.py  test_endpoint.py  test_enforcement.py  test_ergonomics.py  test_events_cancellation.py  test_feature_enabled_profiles.py  test_features.py  test_fingerprint.py  test_golden_contract.py  test_http_correctness.py  test_http_websocket_contracts.py  test_import.py  test_milestone_c.py  test_milestone_e.py  test_milestone_f.py  (+39 more)
crates/eggsec-python/validation/: profiles.json  tool_core_binding_map.json
crates/eggsec-runtime/: Cargo.toml
crates/eggsec-runtime/src/: capabilities.rs  dispatcher.rs  error.rs  event.rs  ids.rs  lib.rs  request.rs  runtime.rs  session.rs
crates/eggsec-runtime/tests/: in_process_client.rs
crates/eggsec-tool-core/: Cargo.toml
crates/eggsec-tool-core/src/: finding.rs  lib.rs  request.rs  response.rs
crates/eggsec-tui/: Cargo.toml
crates/eggsec-tui/src/: AGENTS.override.md  help.rs  lib.rs  search.rs  session.rs  test_utils.rs
crates/eggsec-ui-model/: Cargo.toml
crates/eggsec-ui-model/src/: artifact_view.rs  conversion.rs  dashboard_view.rs  event_view.rs  lib.rs  permission_view.rs  policy_view.rs  renderer_registry.rs  result_view.rs  session_view.rs  task_view.rs
crates/eggsec-ui-model/tests/: view_roundtrip.rs
crates/eggsec-web-proxy/: Cargo.toml
crates/eggsec-web-proxy/src/: config.rs  error.rs  health.rs  http_connect.rs  lib.rs  mcp.rs  pool.rs  rotator.rs  socks.rs  utils.rs
crates/eggsec-web-proxy/tests/: cert_tests.rs  integration_tests.rs  proxy_tests.rs  stress_tests.rs
crates/eggsec/benches/: bench.rs  proxy_benchmarks.rs
crates/eggsec/migrations/: 001_create_scans.sql  002_create_findings.sql  003_create_users.sql
crates/eggsec/src/: audit.rs  constants.rs  lib.rs  nse_tool.rs  probe.rs  types.rs
crates/eggsec/templates/: api-security.yaml  basic-scan.yaml  full-pipeline.yaml  fuzz-common.yaml  waf-test.yaml
crates/eggsec/tests/: agent_tests.rs  auth_tests.rs  benchmark_tests.rs  command_registry.rs  config_tests.rs  db_pentest_adapter.rs  distributed_tests.rs  enforced_dispatch_regression.rs  enforcement_matrix.rs  enforcement_tests.rs  feature_matrix.rs  feature_tests.rs  fingerprint_tests.rs  fuzzer_tests.rs  loadtest_tests.rs  mcp_handler_tests.rs  metadata_consistency.rs  mobile_adapter.rs  negative_tests.rs  nse_integration_tests.rs  nse_real_scripts.rs  nse_tests.rs  openai_tests.rs  openresponses_tests.rs  output_tests.rs  pipeline_e2e_tests.rs  pipeline_stage_tests.rs  pipeline_tests.rs  policy_contract_tests.rs  (+17 more)
crates/slapper/: Cargo.toml  build.rs  waf_bypasses.json
crates/slapper-agent/: Cargo.toml
crates/slapper-cli/: Cargo.toml
crates/slapper-core/: Cargo.toml
crates/slapper-nse/: AGENTS.override.md  Cargo.toml
crates/slapper-output/: Cargo.toml
crates/slapper-plugin/: Cargo.toml
crates/slapper-ruby/: Cargo.toml
crates/slapper-tool-core/: Cargo.toml
crates/slapper-tui/: Cargo.toml
(+3027 files in other folders)
