[workspace]
members = [
    "crates/slapper-core",
    "crates/slapper",
    "crates/slapper-nse",
    "crates/slapper-tui",
    "crates/slapper-cli",
    "crates/slapper-output",
    "crates/slapper-tool-core",
    "crates/slapper-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dbowm91/slapper"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros", "fs", "process", "io-util", "io-std", "signal", "test-util"] }
parking_lot = "0.12"
rand = { version = "0.8", features = ["std_rng"] }
base64 = "0.22"
flate2 = "1"
url = "2"
urlencoding = "2.1"
regex = "1"
hostname = "0.4"
hex = "0.4"
md-5 = "0.10"
sha1 = "0.10"
dashmap = "6"
rustc-hash = "2"
scraper = "0.21"
hickory-resolver = "0.26"
chrono-tz = "0.10"
unicode-normalization = "0.1"
lru = "0.18"
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.test]
opt-level = 1
