[package]
name = "eggsec-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent coordination primitives for Eggsec"
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["agent", "coordination", "security", "distributed"]
categories = ["development-tools"]

[dependencies]
eggsec-core = { path = "../eggsec-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
rustc-hash = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
