[package]
name = "eggsec-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Dependency-light domain types, constants, and shared primitives for Eggsec"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
