[package]
name = "eggsec-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Eggsec daemon runtime"
license.workspace = true

[[bin]]
name = "eggsec-daemon"
path = "src/main.rs"

[dependencies]
eggsec-runtime = { path = "../eggsec-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
uuid.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
