[package]
name = "eggsec-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Eggsec daemon runtime"
license.workspace = true

[[bin]]
name = "eggsec-daemon"
path = "src/main.rs"

[features]
default = []
http-api = ["dep:axum", "dep:async-stream", "dep:futures"]
full-executor = ["dep:eggsec"]

[dependencies]
eggsec-runtime = { path = "../eggsec-runtime" }
eggsec = { path = "../eggsec", optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = "0.7"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror.workspace = true
uuid.workspace = true
anyhow.workspace = true
async-trait.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
eggsec = { path = "../eggsec" }
