[package]
name = "eggsec-output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Report formatting and output adapters for Eggsec"

[dependencies]
eggsec-core = { path = "../eggsec-core" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rustc-hash = { workspace = true }
quick-xml = { version = "0.31", features = ["serialize"] }
unicode-normalization = { workspace = true }
lru = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
tokio = { workspace = true }
