[package]
name = "eggsec-output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Report formatting and output adapters for Eggsec"
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["reporting", "output", "sarif", "json", "security"]
categories = ["development-tools"]

[dependencies]
eggsec-core = { path = "../eggsec-core" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rustc-hash = { workspace = true }
quick-xml = { version = "0.31", features = ["serialize"] }
unicode-normalization = { workspace = true }
lru = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
tokio = { workspace = true }
