[package]
name = "eggsec-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Python bindings for the Eggsec security assessment engine"

[lib]
name = "eggsec"
crate-type = ["cdylib"]

[dependencies]
eggsec = { path = "../eggsec", default-features = false }
eggsec-core = { path = "../eggsec-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
