[package]
name = "eggsec-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Python bindings for the Eggsec security assessment engine"
keywords = ["security", "penetration-testing", "scanner", "python", "bindings"]
categories = ["development-tools", "parser-implementations", "network-programming"]

[lib]
name = "eggsec"
crate-type = ["cdylib"]

[dependencies]
eggsec = { path = "../eggsec", default-features = false }
eggsec-core = { path = "../eggsec-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
url = "2"
