[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "eggsec"
version = "0.1.0"
description = "Python bindings for the Eggsec security assessment engine — a Rust-powered security toolkit for scanning, recon, and reporting."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Eggsec Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
keywords = ["security", "penetration-testing", "scanner", "recon", "waf", "python"]

[project.optional-dependencies]
# System-dependent features require platform-specific system libraries.
# These are only relevant when building with the full-with-system profile.
db-pentest = []
web-proxy = []
mobile = []
mobile-dynamic = ["mobile"]
packet-inspection = []  # requires libpcap-dev at build time
stress-testing = []
nse = []  # requires libssl-dev at build time
wireless = []  # requires wireless-tools at runtime
headless-browser = []  # requires Chromium at runtime
full-no-system = ["websocket", "git-secrets", "sbom", "container"]

[project.urls]
Homepage = "https://github.com/sugarwookie/eggsec"
Documentation = "https://github.com/sugarwookie/eggsec/tree/main/docs/python"
Repository = "https://github.com/sugarwookie/eggsec"
Issues = "https://github.com/sugarwookie/eggsec/issues"

# Wheel profiles:
#   core:              maturin build --release (no optional features)
#   full:              maturin build --release --features full-no-system
#   full-with-system:  maturin build --release --features websocket,git-secrets,sbom,container,...
#
# See docs/python/packaging.md for the full feature matrix.

[tool.pytest.ini_options]
markers = [
    "network: mark test as requiring network access (DNS/TLS to external hosts)",
]
addopts = "-m 'not network'"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "eggsec._core"
include = [
    "python/eggsec/py.typed",
    "python/eggsec/*.pyi",
]
