[package]
name = "eggsec-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Frontend-neutral runtime DTOs and protocol types for Eggsec daemon architecture"
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["security", "runtime", "protocol", "dto"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
