[package]
name = "eggsec-tool-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core data types for the Eggsec tool abstraction layer"

[dependencies]
eggsec-core = { path = "../eggsec-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rustc-hash = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
