[package]
name = "eggsec-ui-model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Frontend-neutral view DTOs and renderer descriptors for Eggsec runtime state"

[dependencies]
eggsec-runtime = { path = "../eggsec-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
